--- a/src/scripts/components/SequenceSurface/SequenceSurface.css
+++ b/src/scripts/components/SequenceSurface/SequenceSurface.css
@@ -1,10 +1,6 @@
 .h5p-sequence-surface {
-  clear: both;
-}
+  --minimum-column-size: 240px;
 
-@container h5p-sequence-process (width >= 480px) {
-  .h5p-sequence-surface {
-    display: flex;
-    flex-flow: row;
-  }
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(min(var(--minimum-column-size), 100%), 1fr));
 }
